--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
  */
 
 
-
+ 
 
 
 /*-----------------------------------*\
@@ -48,10 +48,19 @@
     hsl(0, 0%, 25%) 0%, 
     hsla(0, 0%, 25%, 0) 50%
   );
-  --text-gradient-yellow: linear-gradient(
+  
+  
+  --text-gradient-yellow: rgb(72 162 240);
+  );
+  
+  /*
+    --text-gradient-yellow: linear-gradient(
     to right, 
     hsl(45, 100%, 72%), 
     hsl(35, 100%, 68%)
+  );
+  */
+ 
   );
 
   /* solid */
@@ -63,7 +72,8 @@
   --smoky-black: hsl(0, 0%, 7%);
   --white-1: hsl(0, 0%, 100%);
   --white-2: hsl(0, 0%, 98%);
-  --orange-yellow-crayola: hsl(45, 100%, 72%);
+  /*--orange-yellow-crayola: hsl(45, 100%, 72%);*/
+  --orange-yellow-crayola: rgb(72 162 240);
   --vegas-gold: hsl(45, 54%, 58%);
   --light-gray: hsl(0, 0%, 84%);
   --light-gray-70: hsla(0, 0%, 84%, 0.7);
@@ -379,10 +389,10 @@ main {
 }
 
 .info_more-btn:hover,
-.info_more-btn:focus { background: var(--bg-gradient-yellow-1); }
+.info_more-btn:focus { background: var(--orange-yellow-crayola); }
 
-.info_more-btn:hover::before,
-.info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); }
+/*.info_more-btn:hover::before,
+.info_more-btn:focus::before { background: var(--bg-gradient-yellow-2); }*/
 
 .info_more-btn span { display: none; }
 
@@ -1759,7 +1769,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
   .social-list { justify-content: center; }
 
- 
+
 
   /**
 	 * RESUME
